application/istio-config/waf/authorization-policy-allow-only-get-post.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-only-get-post
  namespace: golang-app-privileged
spec:
  selector:
    matchLabels:
      app: golang-app
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST"]
