application/istio-config/waf/authorization-policy-deny-unsafe-methods.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-unsafe-methods
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["PUT", "PATCH", "DELETE", "TRACE", "CONNECT"]
